--- a/style.css
+++ b/style.css
@@ -4,192 +4,111 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-main {
-    position: absolute;
-    height: 100%;
-    margin-left: 20%;
-    width: 60%;
+body {
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    align-items: center;
+}
+
+nav > ul {
+    list-style: none;
+    height: 7.5vh;
 }
 
 header {
-    position: fixed;
-    height: 100%;
-    width: 20%;
-    border-right: 2px solid rgb(0, 0, 0);
+    display: flex;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.95);
+    margin-bottom: 5rem;
 }
 
-ul {
-    margin: auto;
-    font-weight: 600;
+
+nav > ul >li {
+    display: inline;
+    font-size: 2.5rem;
+    margin-right: 2rem;
+}
+
+nav > ul > li > a {
     text-decoration: none;
-    text-transform: uppercase;
-    width: 80%;
-    margin-top:60%;
-    margin-left: 20%;
-}
-
-ul > li {
-    display: block;
-    font-size: 120%;
-    margin-bottom: 2%;
-}
-
-ul > li > a {
-    display: block;
-    text-decoration: none;
-    color: black;
-    transition: color 0.1s ease-out 50ms;
-}
-
-ul > li > a:before {
-    content: "<";
-}
-
-ul > li > a:after {
-    content: ">";
-}
-
-ul > li > a:hover {
-    color: rgb(255, 255, 255);  
-    background-color: black;
-}
-
-ul > li > a:active {
-    color: rgba(212, 212, 212, 0.8);
-    background-color: none;
+    color: white;
 }
 
 h2 {
-    text-transform: uppercase;
-    font-style: italic;
-    font-size: 120px;
-    font-weight: 1000;
-    margin-top: 22px;
-    margin-bottom: 22px;
+    font-size: 9rem;
     text-align: center;
+    margin-bottom: 3rem;
+    letter-spacing: 1rem;
 }
 
 h3 {
-    font-size: 48px;
-    font-weight: 1000;
-    text-decoration: underline;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    margin-bottom: 3px;
-}
-
-h4 {
-    font-size: 14px;
-    font-style: italic;
-    letter-spacing: 2px;
-    color: rgb(26, 26, 26);
-}
-
-h5 {
-    font-size: 18px;
-    font-style: italic;
-    color: white;
-    background-color: black;
-    padding-left: 5px;
+    font-size: 5rem;
+    letter-spacing: .1rem;
 }
 
 p {
-    font-size: 24px;
-    font-weight: 1000;
-    line-height: 180%;
-    letter-spacing: 1px;
-}
-
-section {
-    margin: auto;
-    width: 95%;
-    padding-top: 10px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 3.25rem;
+    font-weight: 500;
+    line-height: 200%;
+    letter-spacing: .025rem;
 }
 
 article {
-    margin: 1%;
-    margin-bottom: 2%;
-    padding: 2%;
-    border: 1px solid black;
-    border-radius: 2px;
+    margin-bottom: 2rem;
+    padding: 5rem;
+}
+
+main {
+    display: flex;
+    width: 95vw;
+    justify-self: center;
 }
 
 footer {
-    border-top: 2px solid black;
-    height: 40%;
+    height: 30vh;
 }
 
-.article-info {
-    margin-top: 10px;
-    display: inline-block;
-    margin-bottom: 2%;
+img {
+    width: 50%;
 }
 
-.content {
-    display: inline-block;
-}
-
-.sideline {
-    position: fixed;
-    margin-left: 75%;
-    height: 100%;
-    width: 2px;
-    background-color: rgb(0, 0, 0);
-}
-
-.dogear {
-    position: fixed;
-    background-color: black;
-    height: 20px;
-    width: 20px;
-}
-
-#newsletter {
-    margin: auto;
-    width: 90%;
-    text-align: center;
-}
-
-button {
-    margin: auto;
-    display: block;
-    margin-top: 2%;
-    font-size: 18px;
-    font-weight: 700;
-    color: white;
-    background-color: black;
-    padding: 7px;
-    border-radius: 4px;
+form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
 }
 
 label {
-    display: block;
-    margin-top: 2%;
-    font-weight: 700;
-    font-size: 24px;
-}
-
-button[type=submit] {
-    margin-bottom: 3%;
+    font-size: 3rem;
 }
 
 input {
-    margin-top: 1%;
-    font-weight: 600;
-    font-size: 18px;
-    border-radius: 0;
-    border-color: black;
+    font-size: 3rem;
 }
 
-.project-list {
-    margin: auto;
-    font-weight: 600;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 80%;
+select {
+    font-size: 3rem;
 }
 
-.contact-form {
-    width: 70%;
-    margin: auto;
+.form-right {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 2.25rem;
+}
+
+.form-left {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    font-size: 3rem;
 }
