--- a/style.css
+++ b/style.css
@@ -4,10 +4,13 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+html {
+    font-size: 10px;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    font-size: 32px;
     align-items: center;
 }
 
