--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ img {
 
 form {
     display: flex;
-    flex-direction: row;
     width: 100%;
     align-items: center;
 }
@@ -114,4 +113,10 @@ select {
 
 button {
     font-size: 3rem;
+}
+
+@media (max-width: 400px) {
+    main {
+        flex-direction: column;
+    }
 }
